--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-grid-gallery": "^1.0.1-alpha.0",
+    "react-photo-album": "^2.3.1",
+    "react-photo-gallery": "^8.0.0",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
